--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,9 @@
 # testing
 /coverage
 
+# environment variables
+.env
+
 # production
 /build
 
@@ -21,3 +24,5 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+toDo.txt
